# analytics-test-app

./: .gitignore  AGENTS.md  README.md  SQLMESH_VS_DBT.md  justfile  profiles.yml  pyproject.toml
data/: generate_seed_data.py
data/dev/: portfolio_positions.parquet
data/uat/: market_data.parquet  portfolio_positions.parquet
macros/: generate_schema_name.sql
models/: sources.yml
models/marts/: fct_portfolio_waci.sql
models/staging/: _staging.yml  stg_carbon_scores.sql
scripts/: generate_seed_data.py
sqlmesh-test-app/: README.md  config.yaml  pyproject.toml
sqlmesh-test-app/audits/marts/: assert_waci_bounds.sql
tests/marts/: assert_fct_portfolio_waci_unique.sql
tests/staging/: assert_stg_carbon_scores_not_null.sql  assert_stg_market_data_currency_valid.sql  assert_stg_market_data_security_id_unique.sql  assert_stg_portfolio_positions_not_null.sql
