[project]
name = "analytics-workspace"
version = "0.1.0"
description = "Analytics data pipeline monorepo - dbt and SQLMesh implementations"
requires-python = ">=3.12"
dependencies = [
    "dbt-duckdb>=1.10",
    "sqlmesh[duckdb]>=0.142",
    "pyarrow>=19.0",
    "analytics-mcp",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
    "pytest>=8.3",
]

[tool.uv.sources]
analytics-mcp = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.pytest.ini_options]
testpaths = ["packages/mcp/tests"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
