[project]
name = "sqlmesh-test-app"
version = "0.1.0"
description = "SQLMesh project for computing Weighted Average Carbon Intensity (WACI) for portfolios"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlmesh[duckdb]>=0.142",
    "pyarrow>=19.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]

[tool.ruff.lint.isort]
known-first-party = ["sqlmesh_test_app"]
